# reddit_client

./: README.md  pyproject.toml
reddit/: settings.py  urls.py
static/css/: main.css
subreddit/: forms.py  models.py  popular_subs.py  urls.py  view_helpers.py  views.py
subreddit/templatetags/: subreddit_extras.py
templates/: about.html  base.html  post.html  search.html  subreddit.html
templates/partials/: comment.html  comment_forloop.html  loading.html  post_card.html  search_bar.html  sub_dropdown.html  sub_sidebar.html  sub_sorting.html  sub_sorting_links_from.html
